[fix] インストーラーのアプリケーション名がおかしかった不具合の修正
インストーラーでインストールされるアプリケーション名が「app」になっていた不具合を修正しました。copyrightなども修正しました。

--- a/build.gradle
+++ b/build.gradle
@@ -65,7 +65,7 @@ test {
 
 jlink {
     imageZip = project.file("${buildDir}/distributions/app-${javafx.platform.classifier}.zip")
-    options = ['--no-header-files', '--no-man-pages']
+    options = ['--strip-debug', '--no-header-files', '--no-man-pages']
     launcher {
         name = 'うどんべいのパスタ退治'
     }
