--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ plugins {
 
 
 group 'jp.u_donbei'
-version '1.0-SNAPSHOT'
+version '0.1.0'
 
 repositories {
     mavenCentral()
@@ -83,7 +83,7 @@ jlink {
         installerName = 'うどんべいのパスタ退治'
         installerType = 'msi'
         imageOptions = [
-                '--win-console'
+
         ]
         installerOptions = [
                 '--install-dir', '\\udon-pasuta',
