[fix] インストーラーにテクスチャなどが含まれていない不具合を修正
インストーラーにテクスチャが含まれておらず、エラーが出る可能性のある不具合を修正しました。

--- a/build.gradle
+++ b/build.gradle
@@ -83,7 +83,7 @@ jlink {
         installerName = 'うどんべいのパスタ退治'
         installerType = 'msi'
         imageOptions = [
-
+            '--input', 'input'
         ]
         installerOptions = [
                 '--install-dir', '\\udon-pasuta',
