--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ plugins {
     id 'org.openjfx.javafxplugin' version '0.0.13'
     id 'org.beryx.jlink' version '2.25.0'
     id 'checkstyle'
+    id 'com.github.spotbugs' version '6.0.22'
 }
 
 
@@ -107,6 +108,10 @@ checkstyle {
     configFile = file("${rootProject.projectDir}/config/checkstyle/checkstyle.xml");
     toolVersion = '10.18.0'
     sourceSets = [project.sourceSets.main]
+}
+
+spotbugs {
+    excludeFilter = rootProject.file('config/spotbugs/exclude.xml')
 }
 
 tasks.register('buildCount') {
