--- a/build.gradle
+++ b/build.gradle
@@ -45,7 +45,7 @@ application {
 
 javafx {
     version = '22'
-    modules = ['javafx.controls', 'javafx.fxml']
+    modules = ['javafx.controls', 'javafx.fxml', 'javafx.media']
 }
 
 dependencies {
